--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=00glenn679@gmail.com..............
+MAIL_USERNAME=00glenn679@gmail.com
 MAIL_PASSWORD=00GG5679
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=00glenn679@gmail.com
